[package]
name = "kvenv"
description = "Simple utility to run programs with environment downloaded from Azure KeyVault"
categories = ["command-line-utilities"]
homepage = "https://github.com/jakubfijalkowski/kvenv"
repository = "https://github.com/jakubfijalkowski/kvenv"
keywords = ["azure", "keyvault", "env"]
license = "MIT OR Apache-2.0"
authors = ["Jakub Fijałkowski <kuba@codinginfinity.me>"]
edition = "2018"
version = "0.2.0"
resolver = "2"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive", "cargo", "env"] }
futures = "0.3.24"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }

azure_core = { version = "0.5.0", optional = true }
azure_identity = { version = "0.6.0", optional = true }
azure_security_keyvault = { version = "0.5.0", optional = true }

google-secretmanager1 = { version = "4.0.1", optional = true }

rusoto_core = { version = "0.48.0", optional = true }
rusoto_credential = { version = "0.48.0", optional = true }
rusoto_secretsmanager = { version = "0.48.0", optional = true }

[features]
default = ["aws", "azure", "google"]
aws = ["rusoto_core", "rusoto_credential", "rusoto_secretsmanager"]
azure = ["azure_core", "azure_identity", "azure_security_keyvault"]
google = ["google-secretmanager1"]

integration-tests = ["aws", "azure", "google"]
