[package]
name = "kvenv"
description = """
A simple command-line utility that allows running arbitrary commands within a custom environment \
that is loaded from Azure KeyVault, GCP Secret Manager, AWS Secrets Manager or Hashicorp Vault."""

categories = ["command-line-utilities"]
homepage = "https://github.com/jakubfijalkowski/kvenv"
repository = "https://github.com/jakubfijalkowski/kvenv"
keywords = ["azure", "keyvault", "env"]
license = "MIT OR Apache-2.0"
authors = ["Jakub Fijałkowski <kuba@codinginfinity.me>"]
edition = "2021"
resolver = "2"

version = "0.4.0"

[package.metadata.release]
publish = false
allow-branch = ["main"]

sign-tag = true
sign-commit = true

pre-release-commit-message = "Release v{{version}}"
tag-message = "Release v{{version}}"
tag-name = "v{{version}}"

pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## Unreleased (ReleaseDate)", exactly=1},
]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "cargo", "env"] }
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }

azure_core = { version = "0.8.0", optional = true, default-features = false, features = ["enable_reqwest_rustls"]  }
azure_identity = { version = "0.9.0", optional = true, default-features = false, features = ["enable_reqwest_rustls"]  }
azure_security_keyvault = { version = "0.8.0", optional = true, default-features = false, features = ["enable_reqwest_rustls"]  }

google-secretmanager1 = { version = "4.0.1", optional = true }
base64 = { version = "0.21.0", optional = true }

rusoto_core = { version = "0.48.0", optional = true, default-features = false, features = ["rustls"] }
rusoto_credential = { version = "0.48.0", optional = true }
rusoto_secretsmanager = { version = "0.48.0", optional = true, default-features = false, features = ["rustls"]  }

reqwest = { version = "0.11.14", optional = true, default-features = false, features = ["rustls-tls", "json"] }

[features]
default = ["aws", "azure", "google", "vault"]
aws = ["rusoto_core", "rusoto_credential", "rusoto_secretsmanager"]
azure = ["azure_core", "azure_identity", "azure_security_keyvault"]
google = ["google-secretmanager1", "base64"]
vault = ["reqwest", "tokio/fs"]

integration-tests = ["aws", "azure", "google", "vault"]
